# lazychat

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TEST_REPORT.md  config.example.toml
docs/: ARCHITECTURE.md  HOOKS.md  PROVIDERS.md  THEMES.md
src/: app.rs  config.rs  events.rs  lib.rs  main.rs  terminal.rs
src/config/: mod.rs  presets.rs
src/data/: claude.rs  mod.rs
src/process/: adoption.rs  headless.rs  mod.rs  registry.rs
src/ui/: agents.rs  dashboard.rs  mod.rs  presets.rs  sessions.rs  stats.rs  tasks.rs
tests/: config_tests.rs  integration_test.rs  process_tests.rs
